Добавлен lombok.config. Немного улучшен внешний вид кода.