@@ -2,22 +2,22 @@ package com.xmlconverter.service;
 
 import com.xmlconverter.model.Games;
 import com.xmlconverter.model.Game;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
+
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class GameService {
-    public Games getSortedBySalesDesc(Games games) {
-        if (games == null || games.getGames() == null || games.getGames().isEmpty()) {
-            return new Games(List.of());
-        }
-
-        List<Game> sortedList = games.getGames().stream()
-                .sorted(Comparator.comparingLong(Game::getSales).reversed())
-                .collect(Collectors.toList());
-
-        return new Games(sortedList);
+    public Games getSortedBySalesDesc(@NonNull final Games games) {
+        return Optional.ofNullable(games.getGames())
+                .filter(list -> !list.isEmpty())
+                .map(list -> list.stream()
+                        .sorted(Comparator.comparingLong(Game::getSales).reversed())
+                        .toList())
+                .map(Games::new)
+                .orElseGet(() -> new Games(List.of()));
     }
 }
